--- a/README.Rmd
+++ b/README.Rmd
@@ -13,22 +13,22 @@ knitr::opts_chunk$set(
 )
 ```
 
-# ezcox
+# bregr
 
 <!-- badges: start -->
-[![CRAN status](https://www.r-pkg.org/badges/version/ezcox)](https://CRAN.R-project.org/package=ezcox)
-[![](https://cranlogs.r-pkg.org/badges/grand-total/ezcox?color=blue)](https://cran.r-project.org/package=ezcox)
+[![CRAN status](https://www.r-pkg.org/badges/version/bregr)](https://CRAN.R-project.org/package=bregr)
+[![](https://cranlogs.r-pkg.org/badges/grand-total/bregr?color=blue)](https://cran.r-project.org/package=bregr)
 <!-- badges: end -->
 
-The goal of ezcox is to ...
+The goal of bregr is to ...
 
 ## Installation
 
-You can install the development version of ezcox from [GitHub](https://github.com/) with:
+You can install the development version of bregr from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("pak")
-pak::pak("WangLabCSU/ezcox")
+pak::pak("WangLabCSU/bregr")
 ```
 
 ## Example
@@ -36,7 +36,7 @@ pak::pak("WangLabCSU/ezcox")
 This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
-library(ezcox)
+library(bregr)
 ## basic example code
 ```
 
