--- a/README.Rmd
+++ b/README.Rmd
@@ -21,22 +21,30 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/WangLabCSU/bregr/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/WangLabCSU/bregr/actions/workflows/R-CMD-check.yaml)
 <!-- badges: end -->
 
-The **bregr** package is designed to simplify and streamline the process of **b**atch processing **reg**ression models in **R**. Whether you're working with univariate or multivariate models, bregr makes it easy to handle multiple analyses at once. The package returns results in a tidy format, ensuring that the output is organized and accessible for further analysis or reporting. Additionally, bregr generates clear visualization plots that aid in the straightforward interpretation of model results. This makes it an invaluable tool for anyone working with regression models in R, allowing you to focus more on deriving insights and less on the mechanics of setting up and processing models.
+The **bregr** package revolutionizes batch regression modeling in R, enabling you to run **hundreds of models simultaneously** with a clean, intuitive workflow. Designed for both univariate and multivariate analyses, it delivers **tidy-formatted results** and publication-ready visualizations, transforming cumbersome statistical workflows into efficient pipelines.
 
+## Key Features
 
-## A overview of regression modeling in batch
+- 🚀 **Batch Processing**: Automate regression modeling across multiple dependent/independent variables.
+- 📊 **Tidy Output**: Structured results compatible with `tidyverse` for seamless downstream analysis.
+- 📈 **Integrated Visualization**: One-command forest plots and model diagnostics.
+- ⚡️ **Unified Workflow**: Chain operations with native R pipes (`|>`).
+- 📦 **Model Agnostic**: Supports linear models, Cox regression, and more.
 
-Regression modeling in batch involves constructing a series of regression models
-with same or different dependent variables $y_i$ in each model, different independent variables $x_i$
-of interest (focal) in each model, and constant variables (constant) in all models.
+## Batch Regression Modeling Overview
 
-$$
+Batch regression streamlines analyses where:
+
+- Each model shares **identical control variables** (`c₁, c₂...`)
+- **Focal predictors** (`x₁, x₂...`) or **responses** (`y₁, y₂...`) vary systematically
+
+```math
 y_1 = \alpha_1 x_1 + \beta_1 c_1 + \gamma_1 c_2 \\
 y_2 = \alpha_2 x_1 + \beta_2 c_1 + \gamma_2 c_2 \\
 y_3 = \alpha_3 x_1 + \beta_3 c_1 + \gamma_3 c_2 \\
 ... \\
 y_4 = \alpha_n x_n + \beta_n c_1 + \gamma_4 c_2 \\
-$$
+```
 
 
 ## Installation
@@ -69,118 +77,109 @@ lung = survival::lung
 lung$ph.ecog = factor(lung$ph.ecog)
 ```
 
-The design and implementation of bregr follow [Tidy design principles](https://design.tidyverse.org/) and [Tidyverse style guide](https://style.tidyverse.org/), which is easy to understand and use.
+bregr is designed and implemented following [Tidy design principles](https://design.tidyverse.org/) and [Tidyverse style guide](https://style.tidyverse.org/), making it intuitive and user-friendly.
 
-### Basics and workflow
 
-1. Construct a `breg` object:
-
-```{r}
-breg(lung)
-```
-
-2. Set model response (i.e., dependent) variable(s):
+### Core workflow
 
 ```{r}
-breg(lung) |> 
-  br_set_y(c("time", "status"))
+# Define batch models  
+mds <- breg(lung) |>  
+  br_set_y(c("time", "status")) |>            # Survival outcomes  
+  br_set_x(colnames(lung)[6:10]) |>           # Focal predictors  
+  br_set_x2(c("age", "sex")) |>               # Controls  
+  br_set_model("coxph") |>                    # Cox Proportional Hazards  
+  br_run()                                    # Execute models  
 ```
 
-2. Set model predictor (i.e., independent) variables. In batch analysis, this is
-divided into two parts: 1) focal variables and 2) control variables.
-
-Focal variables are injected into constructed models one by one, while
-control variables remain constant across all constructed models.
-
-```{r}
-breg(lung) |> 
-  br_set_y(c("time", "status")) |>
-  br_set_x(colnames(lung)[6:10]) |>   # set focal terms
-  br_set_x2(c("age", "sex"))          # set control terms, this is optional
-```
-> `terms` is desribed in the result object as bregr supports a more broader scope of 
-> predictors. e.g., `x + poly(x, 2)` has one variable x, but two terms `x` and `poly(x, 2)`.
-
-
-3. Set model configuration.
-
-Here, "coxph" (Cox-PH) for survival analysis is given.
-
-```{r}
-mds = breg(lung) |> 
-  br_set_y(c("time", "status")) |>
-  br_set_x(colnames(lung)[6:10]) |>
-  br_set_x2(c("age", "sex")) |> 
-  br_set_model("coxph")
-mds
-```
-We can check constructed model formulas in text format.
-
-```{r}
-br_get_models(mds)
-# or mds@models
-```
-4. The final step is constructing modeling with data and options defined above.
-
-```{r}
-mds = breg(lung) |> 
-  br_set_y(c("time", "status")) |>
-  br_set_x(colnames(lung)[6:10]) |>
-  br_set_x2(c("age", "sex")) |> 
-  br_set_model("coxph") |>
-  br_run()
-mds
-```
-
-Now the `models` slot has been updated to real model objects:
-
-```{r}
-br_get_models(mds)
-```
-
-Tidy and comprehensive modeling results can be obtained from slots `results_tidy` and `results`,
-respectively.
-
-```{r}
-br_get_results(mds, tidy = TRUE)
-br_get_results(mds)
-```
-
-We can see that the whole workflow is easy to read and they are combined by R native operators.
-
-```
-breg(lung) |> 
-  br_set_y(c("time", "status")) |>
-  br_set_x(colnames(lung)[6:10]) |>
-  br_set_x2(c("age", "sex")) |> 
-  br_set_model("coxph") |>
-  br_run()
-```
-
-### Pipeline function
-
-Given the develop experience in [ezcox](https://github.com/ShixiangWang/ezcox/),
-we create a pipeline function for common one-step use.
+### One-Step Pipeline
 
 ```r
-br_pipeline(
-  lung,
+mds <- br_pipeline(  
+  lung,  
+  y = c("time", "status"),  
+  x = colnames(lung)[6:10],  
+  x2 = c("age", "sex"),  
+  method = "coxph"  
+)  
+```
+
+### Output Inspection
+
+Use `br_get_*()` function family to access attributes and data of result `breg` object.
+
+```{r}
+br_get_models(mds)       # Raw model objects  
+br_get_results(mds)       # Comprehensive estimates  
+br_get_results(mds, tidy = TRUE)  # Tidy-formatted coefficients  
+```
+
+### Visualization
+
+#### Forest Plot (Key Results)
+
+bregr mainly provides `br_show_forest()` for plotting data table of modeling results.
+
+```{r dpi=300}
+br_show_forest(mds)
+```
+
+We can tune the plot to only keep focal variables and adjust the limits of x axis.
+
+```{r dpi=300}
+br_show_forest(  
+  mds,  
+  rm_controls = TRUE,    # Focus on focal predictors  
+  xlim = c(0, 10),       # Custom axis scaling  
+  drop = 1               # Remove redundant columns  
+)  
+```
+
+We also provide some interface from other packages for plotting result model(s), e.g., `br_show_forest_ggstats()`, `br_show_forest_ggstatsplot()`, `br_show_fitted_line()`,
+and `br_show_fitted_line_2d()`.
+
+For Cox-PH modeling results (focal variables must be continuous type), we provide a risk network plotting function.
+
+```{r}
+lung2 = lung
+lung2$ph.ecog = as.integer(lung2$ph.ecog)
+mds2 = br_pipeline(
+  lung2,
   y = c("time", "status"),
-  x = colnames(lung)[6:10],
+  x = colnames(lung2)[6:10],
   x2 = c("age", "sex"),
   method = "coxph"
 )
 ```
 
-### Visualization
-
-bregr mainly provides `br_show_forest()` for result data.
-
-```{r fig.width=8, fig.height=6}
-br_show_forest(mds)
+```{r dpi=150, fig.height=8}
+br_show_risk_network(mds2)
 ```
 
 
+### Table
+
+Show tidy table result as pretty table:
+
+```{r}
+br_show_table(mds)
+```
+
+As markdown table:
+
+```{r}
+br_show_table(mds, export = TRUE)
+```
+
+As HTML table:
+
+```{r}
+br_show_table(mds, export = TRUE, args_table_export = list(format = "html"))
+```
+
+## Documentation
+
+All functions are documented in the [package reference](https://wanglabcsu.github.io/bregr/reference/), with full documentation available on the [package site](https://wanglabcsu.github.io/bregr/).
 
 ## Coverage
 
