--- a/README.Rmd
+++ b/README.Rmd
@@ -35,16 +35,16 @@ The **bregr** package revolutionizes batch regression modeling in R, enabling yo
 
 Batch regression streamlines analyses where:
 
-- Each model shares **identical control variables** (`c₁, c₂...`)
-- **Focal predictors** (`x₁, x₂...`) or **responses** (`y₁, y₂...`) vary systematically
+- Each model shares **identical control variables** ($c_1$, $c_2$, ...).
+- **Focal predictors** ($x_1$, $x_2$, ...) or **responses** ($y_1$, $y_2$, ...) vary systematically.
 
-```math
-y_1 = \alpha_1 x_1 + \beta_1 c_1 + \gamma_1 c_2 \\
-y_2 = \alpha_2 x_1 + \beta_2 c_1 + \gamma_2 c_2 \\
-y_3 = \alpha_3 x_1 + \beta_3 c_1 + \gamma_3 c_2 \\
-... \\
-y_4 = \alpha_n x_n + \beta_n c_1 + \gamma_4 c_2 \\
-```
+$$
+y_1 = \alpha_1 x_1 + \beta_1 c_1 + \gamma_1 c_2, \\
+y_2 = \alpha_2 x_2 + \beta_2 c_1 + \gamma_2 c_2, \\
+y_3 = \alpha_3 x_3 + \beta_3 c_1 + \gamma_3 c_2, \\
+\cdots, \\
+y_n = \alpha_n x_n + \beta_n c_1 + \gamma_n c_2 \\
+$$
 
 
 ## Installation
@@ -94,7 +94,7 @@ mds <- breg(lung) |>
 
 ### One-Step Pipeline
 
-```r
+```{r eval=FALSE}
 mds <- br_pipeline(  
   lung,  
   y = c("time", "status"),  
@@ -173,7 +173,7 @@ br_show_table(mds, export = TRUE)
 
 As HTML table:
 
-```{r}
+```{r eval=FALSE}
 br_show_table(mds, export = TRUE, args_table_export = list(format = "html"))
 ```
 
