--- a/vignettes/bregr-group-by.Rmd
+++ b/vignettes/bregr-group-by.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "Run batch regression analysis by `group_by` variable"
+title: "Group Analysis and Visualization"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Basics}
+  %\VignetteIndexEntry{Group Analysis and Visualization}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -17,3 +17,5 @@ knitr::opts_chunk$set(
 ```{r setup}
 library(bregr)
 ```
+
+
