--- a/vignettes/bregr-group-by.Rmd
+++ b/vignettes/bregr-group-by.Rmd
@@ -61,22 +61,22 @@ br_show_forest(mds)
 
 We can optimize the plot for better visualization, for example, by removing the second column of the table and eliminating the row with `NA` results.
 
-```{r show-forest2, fig.width=7, fig.height=4, dpi=150}
+```{r show-forest2, fig.width=8, fig.height=4, dpi=150}
 br_show_forest(
   mds,
   drop = 2,
   subset = !(Group_variable == "2" & variable == "ph.ecog" & label == 3))
 ```
 
-To subset the data rows, we can input an R expression using variables from `br_get_results(mds)`. For example, we can use `Group_variable == "2" & variable == "ph.ecog" & label == 3` to locate the row we want to remove, and then use `!()` to select the negated rows.
+To subset the data rows, we can input an R expression using variables from `br_get_results(mds)`. For example, we can use `Group_variable == "Female" & variable == "ph.ecog" & label == 3` to locate the row we want to remove, and then use `!()` to select the negated rows.
 
 If drop `All` group is necessary, update the `subset` with:
 
-```{r show-forest-rm-all, fig.width=7, fig.height=4, dpi=150}
+```{r show-forest-rm-all, fig.width=8, fig.height=4, dpi=150}
 br_show_forest(
   mds,
   drop = 2,
-  subset = !((Group_variable == "2" & variable == "ph.ecog" & label == 3) |
+  subset = !((Group_variable == "Female" & variable == "ph.ecog" & label == 3) |
                (Group_variable == "All")))
 ```
 
