--- a/README.Rmd
+++ b/README.Rmd
@@ -71,8 +71,8 @@ library(bregr)
 Load data:
 
 ```{r load-data}
-lung = survival::lung
-lung$ph.ecog = factor(lung$ph.ecog)
+lung <- survival::lung
+lung$ph.ecog <- factor(lung$ph.ecog)
 ```
 
 bregr is designed and implemented following [Tidy design principles](https://design.tidyverse.org/) and [Tidyverse style guide](https://style.tidyverse.org/), making it intuitive and user-friendly.
@@ -83,24 +83,24 @@ bregr is designed and implemented following [Tidy design principles](https://des
 Define and construct batch models:
 
 ```{r}
-mds <- breg(lung) |>                          # Init breg object
-  br_set_y(c("time", "status")) |>            # Survival outcomes  
-  br_set_x(colnames(lung)[6:10]) |>           # Focal predictors  
-  br_set_x2(c("age", "sex")) |>               # Controls  
-  br_set_model("coxph") |>                    # Cox Proportional Hazards  
-  br_run()                                    # Execute models  
+mds <- breg(lung) |> # Init breg object
+  br_set_y(c("time", "status")) |> # Survival outcomes
+  br_set_x(colnames(lung)[6:10]) |> # Focal predictors
+  br_set_x2(c("age", "sex")) |> # Controls
+  br_set_model("coxph") |> # Cox Proportional Hazards
+  br_run() # Execute models
 ```
 
 ### One-Step Pipeline
 
 ```{r eval=FALSE}
-mds <- br_pipeline(  
-  lung,  
-  y = c("time", "status"),  
-  x = colnames(lung)[6:10],  
-  x2 = c("age", "sex"),  
-  method = "coxph"  
-)  
+mds <- br_pipeline(
+  lung,
+  y = c("time", "status"),
+  x = colnames(lung)[6:10],
+  x2 = c("age", "sex"),
+  method = "coxph"
+)
 ```
 
 ### Output Inspection
@@ -108,9 +108,9 @@ mds <- br_pipeline(
 Use `br_get_*()` function family to access attributes and data of result `breg` object.
 
 ```{r}
-br_get_models(mds)       # Raw model objects  
-br_get_results(mds)       # Comprehensive estimates  
-br_get_results(mds, tidy = TRUE)  # Tidy-formatted coefficients  
+br_get_models(mds) # Raw model objects
+br_get_results(mds) # Comprehensive estimates
+br_get_results(mds, tidy = TRUE) # Tidy-formatted coefficients
 ```
 
 ### Visualization
@@ -126,12 +126,12 @@ br_show_forest(mds)
 We can tune the plot to only keep focal variables and adjust the limits of x axis.
 
 ```{r dpi=300}
-br_show_forest(  
-  mds,  
-  rm_controls = TRUE,    # Focus on focal predictors  
-  xlim = c(0, 10),       # Custom axis scaling  
-  drop = 1               # Remove redundant columns  
-)  
+br_show_forest(
+  mds,
+  rm_controls = TRUE, # Focus on focal predictors
+  xlim = c(0, 10), # Custom axis scaling
+  drop = 1 # Remove redundant columns
+)
 ```
 
 We also provide some interfaces from other packages for plotting constructed model(s), e.g., `br_show_forest_ggstats()`, `br_show_forest_ggstatsplot()`, `br_show_fitted_line()`,
@@ -140,7 +140,7 @@ and `br_show_fitted_line_2d()`.
 For Cox-PH modeling results (focal variables must be continuous type), we provide a risk network plotting function.
 
 ```{r}
-mds2 = br_pipeline(
+mds2 <- br_pipeline(
   survival::lung,
   y = c("time", "status"),
   x = colnames(survival::lung)[6:10],
