--- a/README.Rmd
+++ b/README.Rmd
@@ -120,7 +120,7 @@ mds_p <- br_pipeline(
   x = colnames(lung)[6:10],
   x2 = c("age", "sex"),
   method = "coxph",
-  run_parallel = 3
+  n_workers = 3
 )
 ```
 
