Improve prediction and survival curve APIs and docs
Refactored br_predict and br_show_survival_curves to use consistent argument names (idx), improved error handling, and updated documentation and examples for clarity. Added br_predict and br_show_survival_curves to pkgdown reference. Removed outdated example and test artifacts. Updated README and man pages to reflect new usage and output.

--- a/README.Rmd
+++ b/README.Rmd
@@ -113,7 +113,7 @@ mds <- br_pipeline(
 
 Run in parallel:
 
-```{r}
+```{r warning=FALSE}
 mds_p <- br_pipeline(
   lung,
   y = c("time", "status"),
@@ -189,17 +189,17 @@ For Cox-PH models, you can generate model predictions (risk scores) and create s
 
 ```{r}
 # Generate model predictions
-scores <- br_predict(mds2, model_idx = "age")
+scores <- br_predict(mds2, idx = "ph.ecog")
 head(scores)
 ```
 
 ```{r dpi=150, fig.height=6}
 # Create survival curves based on model scores
 br_show_survival_curves(
-  mds2, 
-  model_idx = "age",
+  mds2,
+  idx = "ph.ecog",
   n_groups = 3,
-  title = "Survival Curves by Age Model Risk Score"
+  title = "Survival Curves by 'ph.ecog' Model Risk Score"
 )
 ```
 
